Fix on mobile (closes #1)

--- a/www/css/bootstrap_custom.css
+++ b/www/css/bootstrap_custom.css
@@ -1,5 +1,7 @@
-body { padding-top: 70px; } /* To make the navbar not block */
+body {
+    padding-top: 60px;
+}
 
 .jumbotron {
-  background-color: white;
+    background-color: white;
 }
